# wca-states

./: .gitignore  LICENSE  README.md  compose.yml
db/: Dockerfile  pos_processing.sql  pre_processing.sql  schema.sql
front/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
front/src/: App.css  App.jsx
front/src/components/: Header.jsx  footer.jsx
front/src/components/footer/: footer.jsx  footer.module.css
front/src/components/ranking/: ranking.jsx  ranking.module.css
front/src/pages/: home.jsx  profile.jsx  regionalRank.jsx
front/src/pages/home/: home.module.css  index.jsx
front/src/pages/profile/: profile.jsx  profile.module.css
front/src/pages/regionalRank/: regional.module.css  regionalRank.jsx
front/src/routes/: routes.jsx
rasc/: Dockerfile  compose.yml  resultsbystate.sql
server/: Cargo.toml  Dockerfile  database.go  go.mod  go.sum  main.go  models.go  routes.go
server-rust/src/: database.rs  models.rs  routes.rs
server/src/: database.rs  main.rs  routes.rs
updater/: Cargo.toml  Dockerfile  external.go  go.mod  main.go
updater/src/: main.rs
